<resources>
    <string name="app_name">FTA</string>

    <!-- LoginActivity -->
    <string name="login">Login is not valid</string>
    <string name="password">Password is not valid</string>
    <string name="WrongDate">Date is not valid.  Date format is dd.MM.yyyy</string>
    <string name="Internet_is_not_available">Internet is not available</string>
    <string name="Connection_is_switched_off">Connection is switched off. Pls. switch on the connection</string>
    <string name="LoggingIn">Logging in...</string>
    <string name="Updating">Updating...</string>
    <string name="ServerIsNotResponding">Server didn\'t send a respond. Try ones again.</string>
    <string name="UserNotFind">Such user\'s name is not find.</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="Settings">Settings</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="SaveLogin">Save login and password</string>
    <string name="dateFrom">Date from</string>
    <string name="dateTo">Date to</string>
    <string name="URL">Server path</string>

    <!-- MainActivity -->
    <string name="timeout">Response timeout is over</string>
    <string name="find_outlet">Search outlet and add new task</string>
    <string name="outlet_task_copy">New task based on selection</string>
    <string name="asc">Asc</string>
    <string name="desc">Desc</string>
    <string name="update">Update task list</string>
    <string name="person_card">User information</string>
    <string name="label_outlet_name">Outlet name:</string>
    <string name="label_agent_name">Agent name:</string>
    <string name="label_outlet_address">Outlet address:</string>
    <string name="label_open">Open</string>
    <string name="title_activity_form">Task</string>
    <string name="SelectItem">Pls. select list item</string>
    <string name="infoCardTitle">User\'s information</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel user</string>

    <!--FormActivity -->
    <string name="LabelOutlet">Outlet</string>
    <string name="LabelAgent">Agent</string>
    <string name="TargetDate">Cutoff date</string>
    <string name="InitialDate">Initial Date</string>
    <string name="TaskDescription">Task description</string>
    <string name="State">Task state</string>
    <string name="Comments">Agent\'s comments</string>
    <string name="Pictures">Pictures</string>
    <string name="GetingTask">Geting task information</string>
    <string name="SendingTask">Sending task information</string>
    <string name="NoTask">There is no value in task description.</string>
    <string name="NoCutOfDate">There is no value in cutoff date.</string>
    <string name="InvalidDate">Cutoff date needs to be higher then initial date</string>
    <string name="TasksSentOk">Task sent successfully</string>
    <string name="send">Send to server</string>

    <!--SearchActivity -->
    <string name="Search">Search outlet</string>
    <string name="GetingOutlets">Getting outlets from region</string>
    <string name="GetingRegions">Getting regions</string>
    <string name="CreateNewTask">NewTask</string>
    <string name="InitialStatusBP">Started</string>

    <!-- TouchImageViewActivity-->
    <string name="Activity_name">reView image</string>
    <string name="rotate_letf">Rotate left</string>
    <string name="rotate_right">Rotate right</string>


</resources>
