<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FormActivity"
    tools:showIn="@layout/activity_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <!--ТОрговая точка -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LabelOutlet"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/outlet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/welcome_box_white_edit"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="18sp" />

        <!--ТОрговый агент -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/LabelAgent"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/agent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/welcome_box_white_edit"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="18sp" />

        <!--Дата Постановки -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/InitialDate"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/initialdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/welcome_box_white_edit"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="18sp" />

        <!--Дата к исполнению -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/TargetDate"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/deadline_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/welcome_box_white_edit"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="18sp"
                android:layout_weight="0.8"/>

            <ImageView
                android:id="@+id/dtaPikerF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/date_picker"
                android:onClick="showDatePickerDialog"
                android:paddingLeft="8dp"
                android:layout_weight="0.1"/>
        </LinearLayout>
        <!--Описание задачи -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/TaskDescription"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/welcome_box_white_edit"
            android:gravity="start"
            android:lines="3"
            android:paddingBottom="4dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="4dp"
            android:textSize="18sp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <!--Статус -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/State"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/welcome_box_white_edit"
            android:paddingBottom="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="18sp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <!--Комментарии -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/Comments"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/AgentComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/welcome_box_white_edit"
            android:gravity="start"
            android:lines="4"
            android:paddingBottom="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="18sp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <!--Картинки -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/Pictures"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/welcome_box_white_edit"
            android:padding="2dp">

            <HorizontalScrollView
                android:id="@+id/horizontal_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/q2" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/q1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/q3" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/q4" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/q5" />
                </LinearLayout>

            </HorizontalScrollView>
        </FrameLayout>
    </LinearLayout>
</ScrollView>