<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/map_bg"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="4dp"
    android:id="@+id/list_row">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:src="@drawable/state_cloud_white" />

        <TextView
            android:id="@+id/taskname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/state"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:layout_marginRight="95dp"/>

        <TextView
            android:id="@+id/DeadLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingRight="4dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/DeadLine"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:src="@drawable/calendar_yellow" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/l1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingLeft="4dp"
            android:paddingRight="2dp"
            android:text="@string/label_outlet_name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/OutletName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/l1"
            android:paddingLeft="1dp"
            android:paddingRight="4dp"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/l2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingLeft="4dp"
            android:paddingRight="2dp"
            android:text="@string/label_agent_name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/AgentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/l2"
            android:paddingLeft="1dp"
            android:paddingRight="4dp"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/l3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingLeft="4dp"
            android:paddingRight="2dp"
            android:text="@string/label_outlet_address"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/OutletAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/l3"
            android:paddingLeft="1dp"
            android:paddingRight="4dp"
            android:textColor="@android:color/black" />

    </RelativeLayout>

</LinearLayout>

